--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/casperwang/stratocracy/issues"
   },
-  "homepage": "https://github.com/casperwang/stratocracy#readme"
+  "homepage": "https://github.com/casperwang/stratocracy#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "socket.io": "^4.2.0",
+    "socket.io-client": "^4.2.0"
+  }
 }
